--- a/pom.xml
+++ b/pom.xml
@@ -44,22 +44,22 @@
 		<dependency>
 			<groupId>org.glassfish.grizzly</groupId>
 			<artifactId>grizzly-framework-monitoring</artifactId>
-			<version>2.3.3</version>
-		</dependency>
+			<version>2.3.31</version>
+ 		</dependency>
 		<dependency>
 			<groupId>org.glassfish.grizzly</groupId>
 			<artifactId>grizzly-http</artifactId>
-			<version>2.3.3</version>
+			<version>2.3.31</version>
 		</dependency>
 		<dependency>
 			<groupId>org.glassfish.grizzly</groupId>
 			<artifactId>grizzly-http-server</artifactId>
-			<version>2.3.3</version>
+			<version>2.3.31</version>
 		</dependency>
 		<dependency>
 			<groupId>org.glassfish.grizzly</groupId>
 			<artifactId>grizzly-framework-monitoring</artifactId>
-			<version>2.3.3</version>
+			<version>2.3.31</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
@@ -95,8 +95,9 @@
 		<dependency>
 			<groupId>javax.annotation</groupId>
 			<artifactId>javax.annotation-api</artifactId>
-			<version>1.2</version>
+			<version>1.2-b02</version>
 		</dependency>
+
 		<dependency>
 			<groupId>org.glassfish.hk2.external</groupId>
 			<artifactId>javax.inject</artifactId>
